# social-rs

./: .gitignore
server/: Cargo.toml
server/src/: main.rs  post.rs  post_schema.rs  user.rs  user_schema.rs
