[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodm = { path = "../../mongododm-rs/"}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
mongodb = { version = "1"}