[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongododm = {git = "https://github.com/naafiyan/mongododm-rs.git"}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
mongodb = { version = "1"}
